--- a/access_global_local.Rmd
+++ b/access_global_local.Rmd
@@ -64,7 +64,8 @@ list.of.packages <- c("sf",
                       "stars", 
                       "geojsonio", 
                       "devtools", 
-                      "rgee")
+                      "rgee",
+                      "tidyr")
 
 # Identify which CRAN packages aren't currently installed on client computers and store in object
 new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"Package"])]
@@ -83,11 +84,31 @@ GitHub packages.
 
 ## Download, install and load wpgpDownloadR: an R Package interface for downloading raster datasets from the WorldPop FTP.
 
+## check if package is installed, if not, install
+if(!("devtools" %in% installed.packages())){
+
+# Download/install 'devtools' package
+ install.packages("devtools")
+
+  }
+
+if(!("wpgpDownloadR" %in% installed.packages())){
+
 # Download/install 'wpgpDownloadR' package
-# devtools::install_github("wpgp/wpgpDownloadR")
+ devtools::install_github("wpgp/wpgpDownloadR")
+
+  }
+
+if(!("wpgpCovariates" %in% installed.packages())){
+
+# Download/install 'wpgpCovariates' package
+ devtools::install_github("wpgp/wpgpCovariates")
+
+  }
 
 # load 'wpgpDownloadR' package
 library(wpgpDownloadR)
+library(wpgpCovariates)
 
 ```
 All required packages should now be loaded.
@@ -509,61 +530,18 @@ class(mwi_mfl)
 
 
 ### Create SpatialPointsDataFrame (with CRS of 'friction_surface_motor')
-mwi_mfl_spdf <- SpatialPointsDataFrame(coords = mwi_mfl[c("LATITUDE", "LONGITUDE")],
-                                       proj4string = crs(friction_surface_motor),
-                                       data = mwi_mfl)
+mwi_mfl_spdf <- mwi_mfl
+## there's a few points which aren't in lat/long format and should be removed
+erroneous_list <- c("MC010002", "BT240003", "BT240005", "BT240006", "BLK170117", 
+                    "BLK170288", "BLK170372", "MC010564", "MHG190985", "MHG191025")
+mwi_mfl_spdf <- mwi_mfl_spdf[which(!(mwi_mfl_spdf$CODE %in% erroneous_list)), ]
 
-mwi_mfl_spdf
-# Class: SpatialPointsDataFrame
-# CRS set
+## convert to a spatial object
+coordinates(mwi_mfl_spdf) <- ~ LONGITUDE + LATITUDE 
+proj4string(mwi_mfl_spdf) <- CRS("+proj=longlat +datum=WGS84 +no_defs ")
 
-
-### Create SpatialPoints object (with CRS of 'friction_surface_motor')
-mwi_mfl_sp <- SpatialPoints(coords = mwi_mfl[c("LATITUDE", "LONGITUDE")],
-                            proj4string = crs(friction_surface_motor))
-
-mwi_mfl_sp
-# Class: SpatialPoints
-# CRS set
-
-
-## Needs to match 'healthfac':
-healthfac
-# Simple feature collection with 4 features and 21 fields
-# geometry type:  POINT
-# dimension:      XY
-# bbox:           xmin: 33.49996 ymin: -11.22941 xmax: 33.57893 ymax: -10.83907
-# geographic CRS: WGS 84
-
-# Convert mwi_mfl_spdf_sf to sf object (geometry type: POINT geometry)
-mwi_mfl_spdf_sf <- st_as_sf(mwi_mfl_spdf)
-mwi_mfl_spdf_sf
-# Simple feature collection with 1028 features and 11 fields
-# geometry type:  POINT
-# dimension:      XY
-# bbox:           xmin: -542183 ymin: 1 xmax: -1 ymax: 70989710
-# CRS:            +proj=longlat +datum=WGS84 +no_defs
-
-
-## bbox needs to be cropped to aoi
-
-
-# Crop 
-mwi_mfl_spdf_sf_crop <- st_crop(mwi_mfl_spdf_sf, 
-                                c(xmin = bbxmin, 
-                                  xmax = bbxmax, 
-                                  ymin = bbymin, 
-                                  ymax = bbymax))
-## Warnings:
-# bounding box has potentially an invalid value range for longlat data although coordinates are longitude/latitude,
-# st_intersection assumes that they are planar attribute variables are assumed to be spatially constant throughout all geometries
-
-# Tried with st_bbox(healthfac): Same errors
-# Tried with aoi_polygon: Same errors:
-                           
-mwi_mfl_spdf_sf_crop
-# bbox:           xmin: NA ymin: NA xmax: NA ymax: NA    ???
-
+## crop to extent of the raster
+mwi_mfl_cropped <- raster::crop(mwi_mfl_spdf, y = extent(friction_surface_motor))
 
 ```
 
@@ -578,7 +556,7 @@ Health facility data (healthfac) read in during setup stage 6.
 trans_motor <- transition(friction_surface_motor, transitionFunction = function(x){1/mean(x)}, directions = 8)
 
 # Then calculate the cumulative cost
-leastcost_motor <-  accCost(trans_motor, as_Spatial(healthfac))
+leastcost_motor <-  accCost(trans_motor, mwi_mfl_cropped)
 
 writeRaster(leastcost_motor,
             "./outputs/leastcost_raster_motor",
